[gd_scene load_steps=12 format=3 uid="uid://3gq1o61xtg11"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_4s7tl"]
[ext_resource type="Texture2D" uid="uid://dcnanxhae8vfs" path="res://Art_Assets/LVL1small_spritesheet.png" id="1_sknxm"]
[ext_resource type="Resource" uid="uid://cofpqtgr4y0vo" path="res://Properties/Player_Properties.tres" id="2_yxx6s"]
[ext_resource type="Texture2D" uid="uid://7q8i67omqcdq" path="res://Art_Assets/Bubble.png" id="4_bjyyl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v6321"]
height = 50.0

[sub_resource type="AtlasTexture" id="AtlasTexture_y0w5c"]
atlas = ExtResource("1_sknxm")
region = Rect2(0, 0, 76, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny2i5"]
atlas = ExtResource("1_sknxm")
region = Rect2(76, 0, 76, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_817sq"]
atlas = ExtResource("1_sknxm")
region = Rect2(152, 0, 76, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ihwr"]
atlas = ExtResource("1_sknxm")
region = Rect2(228, 0, 76, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_x41d5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0w5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny2i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_817sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ihwr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oi4g1"]
radius = 24.1868

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4s7tl")
properties = ExtResource("2_yxx6s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4, 0.5)

[node name="Body_Collision" type="CollisionShape2D" parent="."]
position = Vector2(-22, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_v6321")

[node name="Player_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x41d5")
autoplay = "default"
frame = 2
frame_progress = 0.199734
offset = Vector2(-22, -3)

[node name="Viewer_Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Viewer_Area2D"]
polygon = PackedVector2Array(12, 0, 202, -86, 258, -39, 258, 39, 202, 86)

[node name="Mouth_Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouth_Area2D"]
shape = SubResource("CircleShape2D_oi4g1")

[node name="Bubbles" type="CPUParticles2D" parent="."]
emitting = false
amount = 600
lifetime = 3.0
randomness = 0.48
lifetime_randomness = 1.0
texture = ExtResource("4_bjyyl")
emission_shape = 1
emission_sphere_radius = 33.8
gravity = Vector2(0, -20)

[node name="Inhale_bar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.470588, 1, 1, 1)
offset_left = -741.0
offset_top = 673.0
offset_right = -552.0
offset_bottom = 682.0
value = 100.0
show_percentage = false

[connection signal="body_entered" from="Viewer_Area2D" to="." method="_on_viewer_area_2d_body_entered"]
[connection signal="body_exited" from="Viewer_Area2D" to="." method="_on_viewer_area_2d_body_exited"]
[connection signal="body_entered" from="Mouth_Area2D" to="." method="_mouth_area_body_entered"]
